BlackBerry Plug-in for Eclipse 2.0 - open source initial push